--- a/tm.html
+++ b/tm.html
@@ -12,7 +12,9 @@
         .top{width: 100%;
             height: 50px;
             background-color: #F2F2F2;
-        white-space: nowrap;}
+            white-space: nowrap;
+            border-bottom: #e5e5e5 solid 1px;
+        }
         .grey
         {
             font-size:18px ;
@@ -92,6 +94,39 @@
             font-size: 18px;
             color: #ffffff;
 }
+        /*.triangle{*/
+            /*border-width: 3px;*/
+            /*border-style:solid;*/
+            /*border-top-color: #ccc;*/
+            /*border-bottom-color: transparent;*/
+            /*border-left-color: transparent;*/
+            /*border-right-color: transparent;*/
+            /*width: 0;*/
+            /*position: absolute;*/
+            /*right: 4px;*/
+            /*top:50% ;*/
+            /*margin-top: -2px;*/
+            /**/
+            /*-webkit-transition: none;*/
+            /*-moz-transition:none;*/
+            /*-ms-transition:none;*/
+            /*-o-transition:none;*/
+            /*transition:none;*/
+
+            /*-webkit-transform-origin: 3px 1.5px;*/
+            /*-moz-transform-origin: 3px 1.5px;*/
+            /*-ms-transform-origin: 3px 1.5px;*/
+            /*-o-transform-origin: 3px 1.5px;*/
+            /*transform-origin: 3px 1.5px;*/
+        /*}*/
+        /*.top .triangle:hover::after{*/
+            /*-webkit-transform:rotate(180deg);*/
+            /*-moz-transfrom:rotate(180deg);*/
+            /*-ms-transfrom:rotate(180deg);*/
+            /*-o-transfrom:rotate(180deg);*/
+            /*transform:rotate(180deg);*/
+
+        /*}*/
         #menul{background-color: #FF0036;font-size: 30px;}
 </style>
 </head>
@@ -100,10 +135,10 @@
     <span class="grey dstc">喵，欢迎来到天猫</span>
     <span class="grey dstc">请登录</span>
     <span class="grey">免费注册</span>
-    <span class="grey dsts0 dstc">我的淘宝</span>
+    <span class="grey dsts0 dstc triangle" >我的淘宝</span>
     <img src="../image/top1.jpg" alt="" class="ltimg">
     <span class="grey dstc">购物车<span style="color: #000">0</span>件</span>
-    <span class="grey dstc">收藏夹</span>
+    <span class="grey dstc triangle" >收藏夹</span>
     <span class="grey">|</span>
     <img src="../image/top2.jpg" class="ltimg">
     <span class="grey dsts">手机版</span>
